--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="p-4 border-b border-gray-700 flex justify-between items-center flex-shrink-0">
             <div class="flex items-center gap-3">
-                <img src="img/adlily.png" alt="Foto Profil Bot"
+                <img src="img/adlily.jpg" alt="Foto Profil Bot"
                     class="w-10 h-10 rounded-full">
                 <div>
                     <h1 class="text-xl font-bold">AskLily</h1>
